--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -1,3 +1,26 @@
+@article { hermann1793notice,
+  author = {B. F. J. Hermann},
+  title = {Notice sur les charbons de terre dans les environs de Kousnetzk en
+	  Siberie},
+  journal = {Nova acta Academiae scientiarum Imperialis Petropolitanae},
+  volume = {11},
+  year = {1793},
+  pages = {376-381},
+  url = {http://archive.org/details/novaactaacademia11petr},
+  urldate = {2012-07-17},
+}
+
+@book { alibert1801eloge,
+  title =	{Eloge historique de Louis Galvani},
+  author =	{Jean-Louis Alibert},
+  editor =	{Louis Ravier and Charles-François Caille and Richard},
+  year =	{1801},
+  url =		{http://www.sudoc.fr/055375979},
+  urldate =	{2013-03-01},
+  location =	{Paris},
+  languange =	{french},
+}
+
 @book { lamarck1802hydrogeologie,
   author = {Jean-Baptiste Lamarck},
   title = {Hydrogéologie},
@@ -13,70 +36,25 @@
   language = {french},
 }
 
-@article { voprosyIstorii1988n1,
-  journal =	{Вопросы истории естествознания и техники},
-  year =	{1988},
-  number =	{1},
+@inbook { popping1835reise-p398,
+  author = {E. Popping},
+  title = {Reise in Chile, Peru und auf dem Amazonenstrom während der Jahre
+	  1827--1832},
+  volume = {1},
+  location = {Lepzig},
+  year = {1835},
+  pages = {398},
+  hyphenation = {german},
 }
 
-@article { yanshin1966tektonika,
-  author =	{Александр Леонидович Яншин},
-  title =	{Тектоника Евразии},
-  subtitle =	{Объяснительная записка к Тектонической карте Евразии},
-  journal =	{Тектоническая карта Евразии},
-  publisher =	{Наука},
-  year =	{1966},
-  hyphenation =	{russian},
-}
-
-@article { yanshin1973nazyvaemyh,
-  author =	{Александр Леонидович Яншин},
-  title =	{О так называемых мировых трансгрессиях и регрессиях},
-  journal =	{Бюллетень МОИП},
-  year =	{1973},
-  number =	{2},
-  volume =	{48},
-  hyphenation =	{russian},
-}
-
-@book { budyko1974klimat,
-  author =	{Михаил Иванович Будыко},
-  title =	{Климат и жизнь},
-  year =	{1974},
-  location =	{Москва},
-  hyphenation =	{russian},
-}
-
-@article { pavlov1922lednikovye,
-  title = {Ледниковые и межледниковые эпохи Европы в связи с историей
-  	ископаемого человека},
-  author = {Алексей Петрович Павлов},
-  journal = {Академическая речь},
-  number = {2},
-  year = {1922},
-  hyphenation = {russian},
-}
-
-@book { schuchert1933geology,
-  title = {A Text Book of Geology},
-  author = {Charles Schuchert and Carl Owen Dunbar},
-  year = 1933,
-  location = {New York},
-  isbn = {B000EVHHNI},
-  language = {english},
-  hyphenation = {english},
-}
-
-@book { pavlov1936geologicheskaya,
-  title = {Геологическая история европейских земель и море в связи с историей
-	ископаемого человека},
-  author = {Алексей Петрович Павлов},
-  year = 1936,
-  publisher = {Академия наук СССР},
-  lccn={50048114},
-  url = {http://books.google.com/books?id=OaTpHAAACAAJ},
-  language = {russian},
-  hyphenation = {russian},
+@book { carus1851nature,
+  title = {On the Nature of Things},
+  author = {Titus Lucretius Carus},
+  origtitle = {De rerum natura},
+  translator = {John Selby Watson},
+  url = {http://books.google.com/books?id=intROeJdmdMC},
+  year = {1851},
+  publisher = {H.G. Bohn},  
 }
 
 @book { agassiz1859essay,
@@ -90,60 +68,81 @@
   hyphenation = {english},
 }
 
-@inbook { ortegaygasset1932revolt-p19,
-  title = {The Revolt of the Masses},
-  author = {José Ortega y Gasset},
-  location = {London},
-  year = 1932,
-  pages = {19},
-  language = {english},
-  hyphenation = {english},
+@online { dana1866classification,
+  author =	{James Dwight Dana},
+  title =	{The Classification of Animals},
+  subtitle =	{On the Principle of Cephalization},
+  year =	{1866},
+  url =		{http://www.geology.19thcenturyscience.org/books/1863-Dana-ClassAnim/htm/doc.html},
+  urldate =	{2012-08-07},
 }
 
-@inbook { leroy1928origines-p37-57,
-  title = {Les origines humaines et l'evolution de l'intelligence},
-  booktitle = {La noosphere et l'hominisation},
-  author = {Edouard Le Roy},
-  location = {Paris},
-  year = {1928},
-  pages = {37-57},
-  language = {french},
-  hyphenation = {french},
+@book { novgorodtsev1902problemy,
+  author =	{С. Н. Булгаков and Е. Н. Трубецкий and П. Б. Струве and
+	H. A Бердяев and С. Л. Франк and С. А. Аскольдов and
+	С. Н. Трубецкий and П. И. Новгородцев and Б. А. Кистяковский and
+	А. С. Лаппо-Данилевский and С. Ф. Ольденбург and Д. Е. Жуковский},
+  editor =	{Павел Иванович Новгородцев},
+  title =	{Проблемы идеализма},
+  year =	{1902},
+  publisher =	{Московское Психологическое общество},
+  url = 	{https://predanie.ru/lib/book/181092/},
+  urldate =	{2014-01-13},
 }
 
-@article { blair1938water,
-  title = {Water---Power of the World},
-  journal = {Nature},
-  publisher = {Nature Publishing Group},
-  volume = {141},
-  number = {3557},
-  year = {1938},
-  doi = {10.1038/141031a0},
-  pages = {31},
-  url = {http://www.nature.com/nature/journal/v141/n3557/abs/141031a0.html},
-  urldate = {2012-07-17},
-  langugage = {english},
-  hyphenation = {english},
+@book { poincare1902science,
+  author =	{Jules Henri Poincaré},
+  title =	{La Science et l'hypothèse},
+  location =	{Paris},
+  publisher =	{Flammarion},
+  series =	{Bibliothèque de philosophie scientifique},
+  year =	{1902},
+  url =		{http://echo.mpiwg-berlin.mpg.de/ECHOdocuViewfull?pn=5&url=/mpiwg/online/permanent/einstein_exhibition/sources/N9B38CEE/pageimg&viewMode=images&mode=imagepath},
+  urldate =	{2012-08-10},
+  hyphenation =	{french},
+  language =	{french},
 }
 
-@book { childe1937man,
-  title = {Man makes himself},
-  author = {Vere Gordon Childe},
-  series = {The Library of Science and Culture},
-  url = {http://books.google.com/books?id=vPgYAAAAYAAJ},
-  year = {1937},
-  location = {London},
-  publisher = {Watts \& co.},
+@book { curie1908oeuvres,
+  author =	{Pierre Curie},
+  title =	{Oeuvres de Pierre Curie},
+  location =	{Paris},
+  publisher =	{Gauthier-Villars},
+  year =	{1908},
 }
 
-@inbook { childe1937man-p56,
-  crossref = {childe1937man},
-  pages = {56},
+@book { osborn1910age,
+  author =	{Henry Fairfield Osborn},
+  title =	{The age of mammals in Europe, Asia and North America},
+  location =	{New York},
+  year =	{1910},
+  url =		{http://archive.org/details/ageofmammalsineu00osbo},
+  urldate =	{2013-07-08},
+  language =	{english},
+  hyphenation =	{english},
 }
 
-@inbook { childe1937man-p78-79,
-  crossref = {childe1937man},
-  pages = {78-79},
+@mvreference { brem1912zhizn-ptitsy,
+  author = {Альфред Эдмунд Брем},
+  title = {Птицы},
+  booktitle = {Жизнь животных},
+  edition = {4-е, совершенно переработанное и значительно расширенное издание
+	  профессора Отто Цур-Штрассена. Авторизованный перевод под редакцией
+	  профессора Психоневрологического института и С.-Петербургского
+	  женского медицинского института Н.~М.\ Книповича},
+  volume = {7},
+  year = {1912},
+  pages = {15},
+  language = {russian},
+  hyphenation = {russian},
+}
+
+@book { carus1913prirode,
+  title = {О природе вещей},
+  userb = {On the Nature of Things},
+  author = {Тит Лукре́ций Кар},
+  year = {1913},
+  hyphenation = {russian},
 }
 
 @book { nikolai1919biologie,
@@ -167,78 +166,6 @@
   pages = {60},
 }
 
-@inbook { weinberg1922dvuhdesyatitysyachiletiyu-p21,
-  author = {Б. П. Вейнберг},
-  title = {К двухдесятитысячелетию начала работ по уничтожению
-	океанов. Очерк истории человечество от первобытного состояния до 2230
-	г.},
-  titleaddon = {(Научная фантазия)},
-  series = {Сибирская природа},
-  location = {Омск},
-  year = {1922},
-  number = {2},
-  pages = {21},
-}
-
-@inbook { kulischer1932kriegs-p135,
-  author = {A. and E.  Kulischer},
-  title = {Kriegs- und Wanderzüge. Weltgeschichte als Völkerbewegung},
-  location = {Berlin-Leipzig},
-  year = {1932},
-  pages = {135},
-  hyphenation = {german},
-}
-
-@inbook { hettner1929gang-p196,
-  author = {Alfred Hettner},
-  title = {Der gang der Kultur über die Erde},
-  edition = {2 umgearbeitete und erw. Aufl.},
-  location = {Leipzig-Berlin},
-  year = {1929},
-  publisher = {B.G. Teubner},
-  lccn = {38030098},
-  url = {http://books.google.com/books?id=-qkFAAAAMAAJ},
-  pages = {196},
-}
-
-@book { frazer1930myths,
-  author = {James George Frazer},
-  title = {Myths of the Origin of Fire},
-  location = {London},
-  year = {1930},
-  isbn = {0878170685, 9780878170685},
-}
-
-@book { bogaevsky1936tehnika,
-  author = {Б. Л. Богаевский},
-  title = {Техника первобытно-коммунискического общества},
-  series = {История техники},
-  number = {1},
-  year = {1936},
-  publisher={Изд-во Академии наук ССР},
-}
-
-@inbook { bogaevsky1936tehnika-p26-27,
-  crossref = {bogaevsky1936tehnika},
-  pages = {26-27},
-}
-
-@inbook { bogaevsky1936tehnika-p11.67,
-  crossref = {bogaevsky1936tehnika},
-  pages = {11,67},
-}
-
-@inbook { popping1835reise-p398,
-  author = {E. Popping},
-  title = {Reise in Chile, Peru und auf dem Amazonenstrom während der Jahre
-	  1827--1832},
-  volume = {1},
-  location = {Lepzig},
-  year = {1835},
-  pages = {398},
-  hyphenation = {german},
-}
-
 @inbook { carpenter1920naturalist-p76-77,
   author = {Geoffrey Douglas Hale Carpenter},
   title = {A Naturalist on Lake Victoria},
@@ -250,206 +177,14 @@
   pages = {76-77},
 }
 
-@inbook { usov1924sostav-p58,
-  author = {Михаил Антонович Усов},
-  title = {Состав и тектоника месторождений южного района Кузнецкого
-	  каменноугольного бассейна},
-  location = {Новониколаевск},
-  year = {1924},
-  pages = {58},
-}
-
-@article { usov1933podzemnye-p34,
-  author = {Михаил Антонович Усов},
-  title = {Подземные пожары в Прокопьевском районе},
-  journal = {Вестник Западно-Сибирского геолого-разведочного треста},
-  year = {1933},
-  number = {4},
-  pages = {34 и сл.},
-}
-
-@article { obruchev1934podzemnye-p83-85,
-  journal = {Природа},
-  title = {Подземные пожары в Кузнецком бассейне---геологический процесс},
-  author = {В. А. Обручев},
-  issn = {0032-874X},
-  year = {1934},
-  number = {3},
-  pages = {83-85},
-  url = {http://www.ras.ru/publishing/nature.aspx},
-  urldate = {2012-07-17},
-  language = {russian},
-  hyphenation = {russian},
-}
-
-@article { hermann1793notice,
-  author = {B. F. J. Hermann},
-  title = {Notice sur les charbons de terre dans les environs de Kousnetzk en
-	  Siberie},
-  journal = {Nova acta Academiae scientiarum Imperialis Petropolitanae},
-  volume = {11},
-  year = {1793},
-  pages = {376-381},
-  url = {http://archive.org/details/novaactaacademia11petr},
-  urldate = {2012-07-17},
-}
-
-@article { jaworsky1933erdbrande,
-  author = {Jaworsky, B. and Radugina, L.},
-  affiliation = {Leningrad},
-  title = {Die Erdbrände im Kusnezk-Becken und die mit ihnen verbundenen
-	   Erscheinungen},
-  journal = {Geologische Rundschau},
-  publisher = {Springer Berlin / Heidelberg},
-  issn = {0016-7835},
-  keyword = {Earth and Environmental Science},
-  pages = {298-310},
-  volume = {24},
-  issue = {5},
-  url = {http://dx.doi.org/10.1007/BF01809729},
-  urldate = {2012-07-17},
-  note = {10.1007/BF01809729},
-  year = {1933},
-}
-
-@article { yavorski1932kamennougolnye,
-  author = {В. И. Яворский and Л. К. Радугина},
-  title = {Каменноугольные пожары в Кузнецком бассейне и связанные с ними
-	явления},
-  journal = {Горный журнал},
-  year = {1932},
-  number = {10},
-  pages = {55},
-  language = {russian},
-  hyphenation = {russian},
-}
-
-@article { isachenko1936biogennoe,
-  author = {Б. Л. Исаченко and Н. И. Мальчевская},
-  title = {Биогенное саморазогревание торфяной крошки},
-  journal = {Доклады Академии Наук},
-  issn = {0869-5652},
-  year = {1936},
-  volume = {4},
-  number = {8},
-  pages = {364},
-  language = {russian},
-  hyphenation = {russian},
-}
-
-@mvreference { brem1912zhizn-ptitsy,
-  author = {Альфред Эдмунд Брем},
-  title = {Птицы},
-  booktitle = {Жизнь животных},
-  edition = {4-е, совершенно переработанное и значительно расширенное издание
-	  профессора Отто Цур-Штрассена. Авторизованный перевод под редакцией
-	  профессора Психоневрологического института и С.-Петербургского
-	  женского медицинского института Н.~М.\ Книповича},
-  volume = {7},
-  year = {1912},
-  pages = {15},
-  language = {russian},
-  hyphenation = {russian},
-}
-
-@article { lukyanov1988neizvestny,
-  journal = {Известия},
-  usera = {The Bulletin},
-  title = {Неизвестный Вернадский},
-  userb = {The Unknown Vernadsky},
-  author = {Ф. Лукьянов},
-  date = {1988-09-29},
-}
-
-@book { belyaev1966donnaya,
-  title = {Донная фауна найбольших глубин (ультраабиссали) Мирового океана},
-  author = {Беляев, Георгий Михайлович},
-  lccn = {67037470},
-  url = {http://books.google.com/books?id=G0Y_AAAAYAAJ},
-  year = {1966},
-  publisher = {Наука},
-  hyphenation = {russian},
-}
-
-@book { belayev1989glubokovodnye,
-  title = {Глубоководные океанические желоба и их фауна},
-  author = {Беляев, Георгий Михайлович},
-  editor = {М. Е. Виноградов},
-  url = {http://www.biblus.ru/Default.aspx?book=555b0a1f4},
-  year = {1989},
-  publisher = {Наука},
-  hyphenation = {russian},
-}
-
-@book { carus1913prirode,
-  title = {О природе вещей},
-  userb = {On the Nature of Things},
-  author = {Тит Лукре́ций Кар},
-  year = {1913},
-  hyphenation = {russian},
-}
-
-@book { carus1936prirode,
-  title = {О природе вещей},
-  author = {Тит Лукре́ций Кар},
-  year = {1936},
-  translator = {Ф. А. Петровский},
-  url = {http://www.nsu.ru/classics/bibliotheca/lucretius.htm},
-  hyphenation = {russian},
-}
-
-@book { carus1851nature,
-  title = {On the Nature of Things},
-  author = {Titus Lucretius Carus},
-  origtitle = {De rerum natura},
-  translator = {John Selby Watson},
-  url = {http://books.google.com/books?id=intROeJdmdMC},
-  year = {1851},
-  publisher = {H.G. Bohn},  
-}
-
-@online { dana1866classification,
-  author =	{James Dwight Dana},
-  title =	{The Classification of Animals},
-  subtitle =	{On the Principle of Cephalization},
-  year =	{1866},
-  url =		{http://www.geology.19thcenturyscience.org/books/1863-Dana-ClassAnim/htm/doc.html},
-  urldate =	{2012-08-07},
-}
-
-@mvbook { pasteur1922oeuvres,
-  author =	{Louis Pasteur},
-  booktitle =	{Oeuvres de Pasteur},
-  volume =	{1},
-  title =	{Dissymétrie moléculaire},
-  location =	{Paris},
-  publisher =	{Masson},
-  year =	{1922},
-  url =		{http://www.biodiversitylibrary.org/item/103132},
-  urldate =	{2012-08-10},
-  hyphenation = {french},
-  language =	{french},
-}
-
-@book { curie1908oeuvres,
-  author =	{Pierre Curie},
-  title =	{Oeuvres de Pierre Curie},
-  location =	{Paris},
-  publisher =	{Gauthier-Villars},
-  year =	{1908},
-}
-
-@book { poincare1902science,
-  author =	{Jules Henri Poincaré},
-  title =	{La Science et l'hypothèse},
-  location =	{Paris},
-  publisher =	{Flammarion},
-  series =	{Bibliothèque de philosophie scientifique},
-  year =	{1902},
-  url =		{http://echo.mpiwg-berlin.mpg.de/ECHOdocuViewfull?pn=5&url=/mpiwg/online/permanent/einstein_exhibition/sources/N9B38CEE/pageimg&viewMode=images&mode=imagepath},
-  urldate =	{2012-08-10},
-  hyphenation =	{french},
-  language =	{french},
+@book { oersted1920discovery,
+  title =	{The Discovery of Electromagnetism Made in the Year 1820},
+  author =	{Hans Christian Oersted and Larson, A.},
+  url =		{http://books.google.com/books?id=1A82AQAAMAAJ},
+  urldate =	{2013-03-01},
+  year =	{1920},
+  location =	{Copenhagen},
+  publisher =	{H. H. Thieles bogtrykkeri}
 }
 
 @book { einstein1921geometrie,
@@ -466,25 +201,50 @@
   language =	{german},
 }
 
-@book { yanshin1988evolyuciya,
-  author =	{Александр Леонидович Яншин},
-  title =	{Эволюция геологических процессов в истории Земли},
-  location =	{Ленинград},
-  publisher =	{Наука},
-  year =	{1988},
+@article { pavlov1922lednikovye,
+  title = {Ледниковые и межледниковые эпохи Европы в связи с историей
+  	ископаемого человека},
+  author = {Алексей Петрович Павлов},
+  journal = {Академическая речь},
+  number = {2},
+  year = {1922},
+  hyphenation = {russian},
 }
 
-@book { julien1931histoire,
-  author =	{Charles André Julien},
-  title =	{Histoire de l'Afrique du Nord: Tunisie, Algérie, Maroc},
-  series =	{Biblioth{\`e}que Historique},
+@mvbook { pasteur1922oeuvres,
+  author =	{Louis Pasteur},
+  booktitle =	{Oeuvres de Pasteur},
+  volume =	{1},
+  title =	{Dissymétrie moléculaire},
   location =	{Paris},
-  publisher =	{Payot},
-  year =	{1931},
-  lccn =	{31021408},
-  url =		{http://books.google.com/books?id=MQohAAAAMAAJ},  
-  urldate =	{2013-02-22},
+  publisher =	{Masson},
+  year =	{1922},
+  url =		{http://www.biodiversitylibrary.org/item/103132},
+  urldate =	{2012-08-10},
+  hyphenation = {french},
   language =	{french},
+}
+
+@inbook { weinberg1922dvuhdesyatitysyachiletiyu-p21,
+  author = {Б. П. Вейнберг},
+  title = {К двухдесятитысячелетию начала работ по уничтожению
+	океанов. Очерк истории человечество от первобытного состояния до 2230
+	г.},
+  titleaddon = {(Научная фантазия)},
+  series = {Сибирская природа},
+  location = {Омск},
+  year = {1922},
+  number = {2},
+  pages = {21},
+}
+
+@inbook { usov1924sostav-p58,
+  author = {Михаил Антонович Усов},
+  title = {Состав и тектоника месторождений южного района Кузнецкого
+	  каменноугольного бассейна},
+  location = {Новониколаевск},
+  year = {1924},
+  pages = {58},
 }
 
 @article { gsell1926memoires,
@@ -509,25 +269,48 @@
   language =	{french},
 }
 
-@book { oersted1920discovery,
-  title =	{The Discovery of Electromagnetism Made in the Year 1820},
-  author =	{Hans Christian Oersted and Larson, A.},
-  url =		{http://books.google.com/books?id=1A82AQAAMAAJ},
-  urldate =	{2013-03-01},
-  year =	{1920},
-  location =	{Copenhagen},
-  publisher =	{H. H. Thieles bogtrykkeri}
+@inbook { leroy1928origines-p37-57,
+  title = {Les origines humaines et l'evolution de l'intelligence},
+  booktitle = {La noosphere et l'hominisation},
+  author = {Edouard Le Roy},
+  location = {Paris},
+  year = {1928},
+  pages = {37-57},
+  language = {french},
+  hyphenation = {french},
 }
 
-@book { alibert1801eloge,
-  title =	{Eloge historique de Louis Galvani},
-  author =	{Jean-Louis Alibert},
-  editor =	{Louis Ravier and Charles-François Caille and Richard},
-  year =	{1801},
-  url =		{http://www.sudoc.fr/055375979},
-  urldate =	{2013-03-01},
+@inbook { hettner1929gang-p196,
+  author = {Alfred Hettner},
+  title = {Der gang der Kultur über die Erde},
+  edition = {2 umgearbeitete und erw. Aufl.},
+  location = {Leipzig-Berlin},
+  year = {1929},
+  publisher = {B.G. Teubner},
+  lccn = {38030098},
+  url = {http://books.google.com/books?id=-qkFAAAAMAAJ},
+  pages = {196},
+}
+
+@book { frazer1930myths,
+  author = {James George Frazer},
+  title = {Myths of the Origin of Fire},
+  location = {London},
+  year = {1930},
+  isbn = {0878170685, 9780878170685},
+}
+
+@book { julien1931histoire,
+  author =	{Charles André Julien},
+  title =	{Histoire de l'Afrique du Nord: Tunisie, Algérie, Maroc},
+  series =	{Biblioth{\`e}que Historique},
   location =	{Paris},
-  languange =	{french},
+  publisher =	{Payot},
+  year =	{1931},
+  lccn =	{31021408},
+  url =		{http://books.google.com/books?id=MQohAAAAMAAJ},  
+  urldate =	{2013-02-22},
+  language =	{french},
 }
 
 @article { deborin1932problema,
@@ -545,37 +328,174 @@
   hyphenation =	{russian},
 }
 
-@book { marx2010capital-v1,
-  author =	{Karl Marx},
-  title =	{Capital},
-  volume =	{1},
-  year =	{2010},
-  url =		{http://www.marxists.org/archive/marx/works/1867-c1/index.htm},
-  urldate =	{2013-07-07},
-  language =	{english},
-  hyphenation =	{english},
+@inbook { kulischer1932kriegs-p135,
+  author = {A. and E.  Kulischer},
+  title = {Kriegs- und Wanderzüge. Weltgeschichte als Völkerbewegung},
+  location = {Berlin-Leipzig},
+  year = {1932},
+  pages = {135},
+  hyphenation = {german},
 }
 
-@book { marx2007capital-v2,
-  author =	{Karl Marx},
-  title =	{Capital},
-  volume =	{2},
-  year =	{2007},
-  url =		{http://www.marxists.org/archive/marx/works/1885-c2/index.htm},
-  urldate =	{2013-07-07},
-  language =	{english},
-  hyphenation =	{english},
+@inbook { ortegaygasset1932revolt-p19,
+  title = {The Revolt of the Masses},
+  author = {José Ortega y Gasset},
+  location = {London},
+  year = 1932,
+  pages = {19},
+  language = {english},
+  hyphenation = {english},
 }
 
-@book { marx2010capital-v3,
-  author =	{Karl Marx},
-  title =	{Capital},
-  volume =	{3},
-  year =	{2010},
-  url =		{http://www.marxists.org/archive/marx/works/1894-c3/index.htm},
-  urldate =	{2013-07-07},
-  language =	{english},
-  hyphenation =	{english},
+@article { yavorski1932kamennougolnye,
+  author = {В. И. Яворский and Л. К. Радугина},
+  title = {Каменноугольные пожары в Кузнецком бассейне и связанные с ними
+	явления},
+  journal = {Горный журнал},
+  year = {1932},
+  number = {10},
+  pages = {55},
+  language = {russian},
+  hyphenation = {russian},
+}
+
+@book { schuchert1933geology,
+  title = {A Text Book of Geology},
+  author = {Charles Schuchert and Carl Owen Dunbar},
+  year = 1933,
+  location = {New York},
+  isbn = {B000EVHHNI},
+  language = {english},
+  hyphenation = {english},
+}
+
+@article { usov1933podzemnye-p34,
+  author = {Михаил Антонович Усов},
+  title = {Подземные пожары в Прокопьевском районе},
+  journal = {Вестник Западно-Сибирского геолого-разведочного треста},
+  year = {1933},
+  number = {4},
+  pages = {34 и сл.},
+}
+
+@article { jaworsky1933erdbrande,
+  author = {Jaworsky, B. and Radugina, L.},
+  affiliation = {Leningrad},
+  title = {Die Erdbrände im Kusnezk-Becken und die mit ihnen verbundenen
+	   Erscheinungen},
+  journal = {Geologische Rundschau},
+  publisher = {Springer Berlin / Heidelberg},
+  issn = {0016-7835},
+  keyword = {Earth and Environmental Science},
+  pages = {298-310},
+  volume = {24},
+  issue = {5},
+  url = {http://dx.doi.org/10.1007/BF01809729},
+  urldate = {2012-07-17},
+  note = {10.1007/BF01809729},
+  year = {1933},
+}
+
+@article { obruchev1934podzemnye-p83-85,
+  journal = {Природа},
+  title = {Подземные пожары в Кузнецком бассейне---геологический процесс},
+  author = {В. А. Обручев},
+  issn = {0032-874X},
+  year = {1934},
+  number = {3},
+  pages = {83-85},
+  url = {http://www.ras.ru/publishing/nature.aspx},
+  urldate = {2012-07-17},
+  language = {russian},
+  hyphenation = {russian},
+}
+
+@book { bogaevsky1936tehnika,
+  author = {Б. Л. Богаевский},
+  title = {Техника первобытно-коммунискического общества},
+  series = {История техники},
+  number = {1},
+  year = {1936},
+  publisher={Изд-во Академии наук ССР},
+}
+
+@inbook { bogaevsky1936tehnika-p26-27,
+  crossref = {bogaevsky1936tehnika},
+  pages = {26-27},
+}
+
+@inbook { bogaevsky1936tehnika-p11.67,
+  crossref = {bogaevsky1936tehnika},
+  pages = {11,67},
+}
+
+@article { isachenko1936biogennoe,
+  author = {Б. Л. Исаченко and Н. И. Мальчевская},
+  title = {Биогенное саморазогревание торфяной крошки},
+  journal = {Доклады Академии Наук},
+  issn = {0869-5652},
+  year = {1936},
+  volume = {4},
+  number = {8},
+  pages = {364},
+  language = {russian},
+  hyphenation = {russian},
+}
+
+@book { carus1936prirode,
+  title = {О природе вещей},
+  author = {Тит Лукре́ций Кар},
+  year = {1936},
+  translator = {Ф. А. Петровский},
+  url = {http://www.nsu.ru/classics/bibliotheca/lucretius.htm},
+  hyphenation = {russian},
+}
+
+@book { pavlov1936geologicheskaya,
+  title = {Геологическая история европейских земель и море в связи с историей
+	ископаемого человека},
+  author = {Алексей Петрович Павлов},
+  year = 1936,
+  publisher = {Академия наук СССР},
+  lccn={50048114},
+  url = {http://books.google.com/books?id=OaTpHAAACAAJ},
+  language = {russian},
+  hyphenation = {russian},
+}
+
+@book { childe1937man,
+  title = {Man makes himself},
+  author = {Vere Gordon Childe},
+  series = {The Library of Science and Culture},
+  url = {http://books.google.com/books?id=vPgYAAAAYAAJ},
+  year = {1937},
+  location = {London},
+  publisher = {Watts \& co.},
+}
+
+@inbook { childe1937man-p56,
+  crossref = {childe1937man},
+  pages = {56},
+}
+
+@inbook { childe1937man-p78-79,
+  crossref = {childe1937man},
+  pages = {78-79},
+}
+
+@article { blair1938water,
+  title = {Water---Power of the World},
+  journal = {Nature},
+  publisher = {Nature Publishing Group},
+  volume = {141},
+  number = {3557},
+  year = {1938},
+  doi = {10.1038/141031a0},
+  pages = {31},
+  url = {http://www.nature.com/nature/journal/v141/n3557/abs/141031a0.html},
+  urldate = {2012-07-17},
+  langugage = {english},
+  hyphenation = {english},
 }
 
 @book { howell1965early,
@@ -599,6 +519,26 @@
   urldate =	{2013-07-08},
 }
 
+@book { belyaev1966donnaya,
+  title = {Донная фауна найбольших глубин (ультраабиссали) Мирового океана},
+  author = {Беляев, Георгий Михайлович},
+  lccn = {67037470},
+  url = {http://books.google.com/books?id=G0Y_AAAAYAAJ},
+  year = {1966},
+  publisher = {Наука},
+  hyphenation = {russian},
+}
+
+@article { yanshin1966tektonika,
+  author =	{Александр Леонидович Яншин},
+  title =	{Тектоника Евразии},
+  subtitle =	{Объяснительная записка к Тектонической карте Евразии},
+  journal =	{Тектоническая карта Евразии},
+  publisher =	{Наука},
+  year =	{1966},
+  hyphenation =	{russian},
+}
+
 @book { ivanova1972geologische,
   author =	{Irina Konstaninowna Ivanova},
   title =	{Das geologische Alter des fossilen Menschen},
@@ -609,13 +549,94 @@
   hyphenation =	{german},
 }
 
-@book { osborn1910age,
-  author =	{Henry Fairfield Osborn},
-  title =	{The age of mammals in Europe, Asia and North America},
-  location =	{New York},
-  year =	{1910},
-  url =		{http://archive.org/details/ageofmammalsineu00osbo},
-  urldate =	{2013-07-08},
+@article { yanshin1973nazyvaemyh,
+  author =	{Александр Леонидович Яншин},
+  title =	{О так называемых мировых трансгрессиях и регрессиях},
+  journal =	{Бюллетень МОИП},
+  year =	{1973},
+  number =	{2},
+  volume =	{48},
+  hyphenation =	{russian},
+}
+
+@book { budyko1974klimat,
+  author =	{Михаил Иванович Будыко},
+  title =	{Климат и жизнь},
+  year =	{1974},
+  location =	{Москва},
+  hyphenation =	{russian},
+}
+
+@book { mochalov1982vladimir,
+  author =	{И. И. Мочалов},
+  title =	{Владимир Иванович Вернадский. 1863--1945 гг.},
+  year =	{1982},
+  location =	{Москва},
+  publisher =	{Наука},
+}
+
+@article { voprosyIstorii1988n1,
+  journal =	{Вопросы истории естествознания и техники},
+  year =	{1988},
+  number =	{1},
+}
+
+@article { lukyanov1988neizvestny,
+  journal = {Известия},
+  usera = {The Bulletin},
+  title = {Неизвестный Вернадский},
+  userb = {The Unknown Vernadsky},
+  author = {Ф. Лукьянов},
+  date = {1988-09-29},
+}
+
+@book { yanshin1988evolyuciya,
+  author =	{Александр Леонидович Яншин},
+  title =	{Эволюция геологических процессов в истории Земли},
+  location =	{Ленинград},
+  publisher =	{Наука},
+  year =	{1988},
+}
+
+@book { belayev1989glubokovodnye,
+  title = {Глубоководные океанические желоба и их фауна},
+  author = {Беляев, Георгий Михайлович},
+  editor = {М. Е. Виноградов},
+  url = {http://www.biblus.ru/Default.aspx?book=555b0a1f4},
+  year = {1989},
+  publisher = {Наука},
+  hyphenation = {russian},
+}
+
+@book { marx2007capital-v2,
+  author =	{Karl Marx},
+  title =	{Capital},
+  volume =	{2},
+  year =	{2007},
+  url =		{http://www.marxists.org/archive/marx/works/1885-c2/index.htm},
+  urldate =	{2013-07-07},
+  language =	{english},
+  hyphenation =	{english},
+}
+
+@book { marx2010capital-v1,
+  author =	{Karl Marx},
+  title =	{Capital},
+  volume =	{1},
+  year =	{2010},
+  url =		{http://www.marxists.org/archive/marx/works/1867-c1/index.htm},
+  urldate =	{2013-07-07},
+  language =	{english},
+  hyphenation =	{english},
+}
+
+@book { marx2010capital-v3,
+  author =	{Karl Marx},
+  title =	{Capital},
+  volume =	{3},
+  year =	{2010},
+  url =		{http://www.marxists.org/archive/marx/works/1894-c3/index.htm},
+  urldate =	{2013-07-07},
   language =	{english},
   hyphenation =	{english},
 }
