--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -523,4 +523,16 @@ life.\footnoteEd{
 	\fullcite{vernadsky1988nauchnom}.
 }
 
+This is V.~I.~Vernadsky's first philosophical work, important for the
+formulation of those views which permeate his further work.  He announces the
+existence of a reality, independent of our consciousness, the conception of
+which is the scientific world-view, changing according to the discovery of new
+facts, new natural phenomena.  It is interesting that when P.~I.~Novgorodtsev,
+having become acquainted with the manuscript of this article by Vernadsky,
+proposed to publish it in the collection \btcite{novgorodtsev1902problemy}
+Vladimir Vernadsky refused, stating that he was not an idealist, but a
+realist.\footnoteEd{
+	\fullcite{mochalov1982vladimir}
+}
+
 . . .
