Yanshin's preface. Added <.gitignore>.

--- a/tex/bib/vernadsky.bib
+++ b/tex/bib/vernadsky.bib
@@ -455,12 +455,25 @@
 }
 
 @book { vernadsky1940biogeohimicheskie,
-  title = {Биогеохимические очерки (1922--1932)},
-  author = {Владимир Иванович Вернадский},
-  lccn = {56048683},
-  url = {http://books.google.com/books?id=37cIHAAACAAJ},
-  year = {1940},
-  publisher = {Изд-во Академии наук СССР},
+  title =	{Биогеохимические очерки (1922--1932)},
+  author =	{Владимир Иванович Вернадский},
+  lccn =	{56048683},
+  url =		{http://books.google.com/books?id=37cIHAAACAAJ},
+  year =	{1940},
+  publisher =	{Изд-во Академии наук СССР},
+}
+
+@article { vernadsky1944neskolko,
+  title =	{Несколько слов о ноосфере},
+  author =	{Владимир Иванович Вернадский},
+  journal =	{Успехи современной биологии},
+  year =	{1944},
+  number =	{18},
+  volume =	{2},
+  pages =	{113-120},
+  issn =	{0042-1324},
+  url =		{http://vernadsky.lib.ru/e-texts/archive/noos.html},
+  urldate =	{2014-01-23},
 }
 
 @mvbook { vernadsky1954sochineniya-v1,
