--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -464,31 +464,35 @@ significance of philosophy, as the roots and vital atmosphere of scientific
 endeavor, can be precisely and clearly traced in the history of the development
 of scientific thought.''\footcite{vernadsky1988trudy-p21}
 
-V.\ I.\ Vernadsky stayed true to the principle presented in this letter his
+V.~I.~Vernadsky stayed true to the principle presented in this letter his
 whole life.  Statements with similar meaning can be found in numerous other
 letters and works of his, especially in the many publications on the history of
 scientific knowledge.  All of them are permeated by philosophical
 conceptualizations of the presented material.
 
 However, we, it seems, unexpectedly encounter different statements of
-V.\ I.\ Vernadsky's, which separate philosophy from scientific knowledge, and
+V.~I.~Vernadsky's, which separate philosophy from scientific knowledge, and
 even mention it alongside religion, in works, letters, and diaries from the
 30s.  In order to understand this, it is necessary to take into account that in
 the given case we are talking about the dominant in those years philosophy of
 vulgar dialectical materialism, ordering not only the representatives of the
 social sciences, but also natural scientists what conclusions and inferences to
 make, in order for them to completely correspond to the philosophical ``laws''.
-V.\ I.\ Vernadsky could not accept such a philosophy, for which he was
+V.~I.~Vernadsky could not accept such a philosophy, for which he was
 criticized by A.\ M.\ Deborin, who accused him of
-idealism.\footnote{\cite{deborin1932problema}}  V.~I.~Vernadsky responded to
-this criticism with great dignity, even though it painfully wounded his
-pride.\footnote{\cite{vernadsky1933povodu}}  He always thought that an unbiased
-collection of as many facts about the topic of investigation as possible, their
-subsequent objective generalization, and, only afterward, a philosophical
-understanding must be the basis for every investigation.  By the way,
-V.~I.~Vernadsky regarded Karl Marx as a scientist with great respect
-precisely because a great amount of thoroughly and conscientiously collected
-material lay at the foundation of the
+idealism.\footnote{
+	\cite{deborin1932problema}
+}
+V.~I.~Vernadsky responded to this criticism with great dignity, even though it
+painfully wounded his pride.\footnote{
+	\cite{vernadsky1933povodu}
+}
+He always thought that an unbiased collection of as many facts about the topic
+of investigation as possible, their subsequent objective generalization, and,
+only afterward, a philosophical understanding must be the basis for every
+investigation.  By the way, V.~I.~Vernadsky regarded Karl Marx as a scientist
+with great respect precisely because a great amount of thoroughly and
+conscientiously collected material lay at the foundation of the
 \btcite{marx2010capital-v1}\nocite{marx2007capital-v2,marx2010capital-v3}.
 
 The development of V.\ I.\ Vernadsky's philosophical views is reviewed more in
@@ -518,7 +522,7 @@ journal's version.
 The article \btcite{vernadsky1902nauchnom} was first published in the journal
 \ctciteo{vernadsky1902nauchnom} in 1902, and was re-published a few more times
 subsequently in various collections with little changes during Vernadsky's
-life.\footnoteEd{
+life.\footnote{
 	We are re-publishing it according to the edition
 	\fullcite{vernadsky1988nauchnom}.
 }
@@ -531,8 +535,30 @@ facts, new natural phenomena.  It is interesting that when P.~I.~Novgorodtsev,
 having become acquainted with the manuscript of this article by Vernadsky,
 proposed to publish it in the collection \btcite{novgorodtsev1902problemy}
 Vladimir Vernadsky refused, stating that he was not an idealist, but a
-realist.\footnoteEd{
+realist.\footnote{
 	\fullcite{mochalov1982vladimir}
 }
+
+The second article, ``Some Words about the Noosphere,'' can be viewed as a
+direct continuation and development of the views presented in the work
+\rtitle{Scientific Thought as a Planetary Phenomenon}.  This article was
+published in 1944.\footnote{
+	\fullcite{vernadsky1944neskolko}
+}
+The conditions, ensuring the transition of the biosphere into the noosphere,
+are clearly formulated in it, and the article concludes with the author's
+expressed firm confidence in the victory over fascism, since ``the ideals of
+our democracy are in unison with the tempestuous geological process, with
+nature's laws, correspond to the noosphere.''
+
+This last of V.~I.~Vernadsky's publications in his lifetime (the article was
+already written in the heat of the war in 1943) is infused with optimism.  The
+genius scientist was convinced that human reason will triumph, and not only
+that fascism will be defeated, but also that everything which still interferes
+with the transformation of the biosphere into the noosphere will be eliminated.
+
+Now his forecasts have started to come true.
+
+\section*{Remarks}
 
 . . .
