--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -550,8 +550,43 @@ completely unclear, and great discoveries are possible.
 
 
 \Section % 23
+A deep transformation of thought in the areas of religion, art, and philosophy
+occurred `simultaneously,' say, two and a half thousand years ago in various
+cultural centers: in Iran, in China, in Aryan India, in the Hellenic
+Mediterranean (current Italy), great creators of religous systems
+emerged---Zoroaster, Pythagoras, Confucius, Buddha, Lao-tzu, Mahavira,---who
+have encompassed in their influence, continuing to this day, millions of
+people.
 
-. . .
+\emph{The idea of the unity of mankind,} of people as brothers, left the limits
+of individuals approaching it in their intuitions or inspirations for the first
+time, and became an engine of the life and everyday activity of the masses of
+peoples, and a goal of national education.  It has not left the field of
+mankind's history since then, but is, nevertheless, still far from its
+realization.  Slowly, with intermissions of many centuries, the conditions
+allowing its realization, its actual incorporation into life, are being
+created.
+
+It is important and characteristic that these ideas belonged to the framework
+of those everyday real phenomena, which have been created unconsiously in daily
+life, outside man's will.  In them was manifested the influence of the
+individual, an influence thanks to which, by organizing popular masses, this
+idea can affect the surrounding biosphere and manifest itself tempestuously in
+it.
+
+Earlier, it was manifested in poetically inspired work, from which emanated
+religion, philosophy, and science, all of which are social manifestations of
+it.  The leading religous ideas, evidently, preceded the philosophical
+intuitions and generalizations by many centuries, if not millenia.
+
+The biosphere of the XX century is turning into the noosphere, which is being
+created primarily by the growth of science, the scientific understanding and
+the social labor of mankind based on it.  I shall return to the analysis of the
+noosphere below, in the further exposition.  At present, it is necessary to
+emphasize the unbreakable connection between its creation and the growth of
+scientific thought, which is the first necessary precondition for this
+creation.  The noosphere can be created only under this condition.
+
 
 \Section % 24
 
